[tool.poetry]
name = "ofnodes"
version = "1.0.2"
description = "A library of Data Structures and Algorithms written in Python"
authors = ["Robert Portelli <github@robertportelli.com>"]
readme = "README.md"
packages = [{include = "ofnodes", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
mkdocs-material = "^9.5.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
